<resources>
    <string name="app_name">PRM391x_QuizApp_datncfx00499</string>
    <string name="quiz_app">Quiz App</string>
    <string name="question_1">1. What is Deoxyribonucleic acid commonly referred to as?</string>
    <string name="question_2">2. What process involves treating rubber with sulfur to harden it?</string>
    <string name="question_3">3. Name two different organelles of a eukaryotic cell?</string>
    <string name="question_4">4. This word describes the force that pulls objects to the middle of the earth?</string>
    <string name="question_5">5 What type of trees yield the resin used to produce turpentine?</string>
    <string name="question_6">6. Cumulus and Cirrus are types of what?</string>
    <string name="question_7">7. Which two planets have one or more moons?</string>
    <string name="question_8">8. Where in the human body would you find the scaphoid bone?</string>
    <string name="question_9">9. Which grow upwards Stalactites or Stalagmites?</string>
    <string name="question_10">10. What process involves heating an ore to obtain a metal?</string>
    <string name="q1_rna">RNA</string>
    <string name="q1_cia">CIA</string>
    <string name="q1_dna">DNA</string>
    <string name="q3_ribosome">Ribosomes</string>
    <string name="q3_plasmids">Plasmids</string>
    <string name="q3_golgi_apparatus">Golgi apparatus</string>
    <string name="q3_diploid">Diploid</string>
    <string name="q5_palm">Palm trees</string>
    <string name="q5_pine">Pine trees</string>
    <string name="q5_oak">Oak trees</string>
    <string name="q7_ceres">Ceres</string>
    <string name="q7_mercury">Mercury</string>
    <string name="q7_earth">Earth</string>
    <string name="q7_pluto">Pluto</string>
    <string name="q9_stalactites">Stalactites</string>
    <string name="q9_stalagmites">Stalagmites</string>
    <string name="anwser">Anwser</string>
    <string name="submitbtn">Submit Answers</string>
    <string name="tryagain_btn">Try Again</string>
    <string name="login_account">Login Account</string>
    <string name="user">Username</string>
    <string name="stdcode">Student Code</string>
    <string name="timeout">Time Out!!!</string>
    <string name="time_exam">Hello! You have 2 minutes to do exam. Let\'s go!!!</string>
    <string name="hint_anwser">Anwser</string>
    <string name="username">Username</string>
    <string name="std_code">Student Code</string>
    <string name="login">Login</string>
</resources>
