<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:layout_width="@dimen/image_size"
        android:layout_height="@dimen/image_size"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_account"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/quiz_app_text_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/question_margin"
        android:layout_marginLeft="@dimen/question_margin">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="@dimen/activity_text_size"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edtUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="@dimen/question_margin"
        android:layout_marginLeft="@dimen/question_margin">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/std_code"
            android:textSize="@dimen/activity_text_size"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/edtStdCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />


    </LinearLayout>

    <Button
        android:onClick="btnLogin"
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />

</LinearLayout>